# llm-council

./: .env.example  LLM_COUNCIL_MAP_FOR_CLAUDE_OPUS.md  SECURITY_GUIDE.md  SYSTEM_DOCUMENTATION.md  Start_Council.bat  TEST_RESULTS.md  check_health.py  council.db  create_backup.ps1  pyproject.toml  reset_user.py  restart_backend.ps1  start.ps1  start.sh  test_api_live.py  test_complete.py  test_cors_connection.py  test_council_modes.py  test_data.py  test_full_pipeline.py  test_model_check.py  test_news.py  test_nvda.py  test_phase1.py  test_phase2.py  test_prompt_fix.py  test_v2.py  verify_env.py
.cursor/rules/: financial.mdc  project.mdc  streaming.mdc
backend/: analytics.py  backtester.py  cache_manager.py  config.py  convert_history.py  correlation.py  council.py  create_report.py  create_report_html.py  database.py  file_parser.py  fundamentals.py  main.py  market_data.py  memory.py  openrouter.py  prompts.py  schemas.py  search_tool.py  settings.py  storage.py  technicals.py  test_phase1.py  utils.py
frontend/: package-lock.json  package.json
readable_history/: 19577889-8221-4edd-932d-7f7a048fa8e5.html  19577889-8221-4edd-932d-7f7a048fa8e5.md  2b20a423-43d0-419d-97b6-7b768ee0aa7c.html  2b20a423-43d0-419d-97b6-7b768ee0aa7c.md  526fcfa0-d386-4a24-8f44-8ad426dd35e3.html  526fcfa0-d386-4a24-8f44-8ad426dd35e3.md  898a7318-3ed9-4247-8b06-5fc006a441a5.html  898a7318-3ed9-4247-8b06-5fc006a441a5.md  da388f80-1cd8-4153-ba78-2015161be856.html  da388f80-1cd8-4153-ba78-2015161be856.md  dca10401-e015-4871-a053-84a4385404ec.html  dca10401-e015-4871-a053-84a4385404ec.md
(+29 files in other folders)
